doc/windows/Delphi/32bit/multi_card/gts.pas

function GT_LnXYZOverride2WN(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_LnXYZAOverride2WN(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;a:LongInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_LnXYG0Override2WN(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;synVel:Double;synAcc:Double;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_LnXYZG0Override2WN(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;synVel:Double;synAcc:Double;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_LnXYZAG0Override2WN(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;a:LongInt;synVel:Double;synAcc:Double;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_ArcXYROverride2WN(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;radius:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_ArcXYCOverride2WN(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;xCenter:Double;yCenter:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_ArcYZROverride2WN(cardNum:SmallInt ;crd:SmallInt;y:LongInt;z:LongInt;radius:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_ArcYZCOverride2WN(cardNum:SmallInt ;crd:SmallInt;y:LongInt;z:LongInt;yCenter:Double;zCenter:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_ArcZXROverride2WN(cardNum:SmallInt ;crd:SmallInt;z:LongInt;x:LongInt;radius:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_ArcZXCOverride2WN(cardNum:SmallInt ;crd:SmallInt;z:LongInt;x:LongInt;zCenter:Double;xCenter:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_HelixXYRZWN(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;radius:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_HelixXYCZWN(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;xCenter:Double;yCenter:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_HelixYZRXWN(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;radius:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_HelixYZCXWN(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;yCenter:Double;zCenter:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_HelixZXRYWN(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;radius:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_HelixZXCYWN(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;zCenter:Double;xCenter:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_HelixXYRZOverride2WN(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;radius:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_HelixXYCZOverride2WN(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;xCenter:Double;yCenter:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_HelixYZRXOverride2WN(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;radius:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_HelixYZCXOverride2WN(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;yCenter:Double;zCenter:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_HelixZXRYOverride2WN(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;radius:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_HelixZXCYOverride2WN(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;zCenter:Double;xCenter:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_BufTrend(cardNum:SmallInt ;crd:SmallInt;trendSegNum:LongInt ;trendDistance:Double ;trendVelEnd:Double ;fifo:SmallInt =0): SmallInt; stdcall; External GTDLL;
function GT_BufIO(cardNum:SmallInt ;crd:SmallInt;doType:Word ;doMask:Word ;doValue:Word ;fifo:SmallInt =0): SmallInt; stdcall; External GTDLL;
function GT_BufEnableDoBitPulse(cardNum:SmallInt ;crd:SmallInt;doType:SmallInt;doIndex:SmallInt;highLevelTime:Word;lowLevelTime:Word;pulseNum:LongInt;firstLevel:SmallInt;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_BufDisableDoBitPulse(cardNum:SmallInt ;crd:SmallInt;doType:SmallInt;doIndex:SmallInt;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_BufDelay(cardNum:SmallInt ;crd:SmallInt;delayTime:Word;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_BufComparePulse(cardNum:SmallInt ;crd:SmallInt;level:SmallInt;outputType:SmallInt;time:SmallInt;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_BufDA(cardNum:SmallInt ;crd:SmallInt;chn:SmallInt;daValue:SmallInt;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_BufLmtsOn(cardNum:SmallInt ;crd:SmallInt;axis:SmallInt;limitType:SmallInt;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_BufLmtsOff(cardNum:SmallInt ;crd:SmallInt;axis:SmallInt;limitType:SmallInt;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_BufSetStopIo(cardNum:SmallInt ;crd:SmallInt;axis:SmallInt;stopType:SmallInt;inputType:SmallInt;inputIndex:SmallInt;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_BufMove(cardNum:SmallInt ;crd:SmallInt;moveAxis:SmallInt;pos:LongInt;vel:Double;acc:Double;modal:SmallInt;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_BufGear(cardNum:SmallInt ;crd:SmallInt;gearAxis:SmallInt;pos:LongInt;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_BufGearPercent(cardNum:SmallInt ;crd:SmallInt;gearAxis:SmallInt;pos:LongInt;accPercent:SmallInt;decPercent:SmallInt;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_BufStopMotion(cardNum:SmallInt ;crd:SmallInt;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_BufSetVarValue(cardNum:SmallInt ;crd:SmallInt;pageId:SmallInt;out pVarInfo:TVarInfo;value:Double;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_BufJumpNextSeg(cardNum:SmallInt ;crd:SmallInt;axis:SmallInt;limitType:SmallInt;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_BufSynchPrfPos(cardNum:SmallInt ;crd:SmallInt;encoder:SmallInt;profile:SmallInt;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_BufVirtualToActual(cardNum:SmallInt ;crd:SmallInt;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_BufSetLongVar(cardNum:SmallInt ;crd:SmallInt;index:SmallInt;value:LongInt;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_BufSetDoubleVar(cardNum:SmallInt ;crd:SmallInt;index:SmallInt;value:Double;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_CrdStart(cardNum:SmallInt ;mask:SmallInt;optionV:SmallInt):SmallInt;stdcall;External GTDLL;
function GT_CrdStartStep(cardNum:SmallInt ;mask:SmallInt;option:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_CrdStepMode(cardNum:SmallInt ;mask:SmallInt;option:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_SetOverride(cardNum:SmallInt ;crd:SmallInt;synVelRatio:Double):SmallInt;stdcall;External GTDLL;
function GT_SetOverride2(cardNum:SmallInt ;crd:SmallInt;synVelRatio:Double): SmallInt; stdcall; External GTDLL;
function GT_InitLookAhead(cardNum:SmallInt ;crd:SmallInt;fifo:SmallInt;T:Double;accMax:Double;n:SmallInt;var pLookAheadBuf:TCrdData):SmallInt;stdcall;External GTDLL;
function GT_GetLookAheadSpace(cardNum:SmallInt ;crd:SmallInt;out pSpace:LongInt;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_GetLookAheadSegCount(cardNum:SmallInt ;crd:SmallInt;out pSegCount:LongInt;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_CrdClear(cardNum:SmallInt ;crd:SmallInt;fifo:SmallInt):SmallInt;stdcall;External GTDLL;
function GT_CrdStatus(cardNum:SmallInt ;crd:SmallInt;out pRun:SmallInt;out pSegment:LongInt; fifo:SmallInt = 0):SmallInt;stdcall;External GTDLL;
function GT_SetUserSegNum(cardNum:SmallInt ;crd:SmallInt;segNum:LongInt;fifo:SmallInt = 0):SmallInt;stdcall;External GTDLL;
function GT_GetUserSegNum(cardNum:SmallInt ;crd:SmallInt;out pSegNum:LongInt;fifo:SmallInt = 0):SmallInt;stdcall;External GTDLL;
function GT_GetUserSegNumWN(cardNum:SmallInt ;crd:SmallInt;out pSegment:LongInt;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_GetRemainderSegNum(cardNum:SmallInt ;crd:SmallInt;out pSegNum:LongInt;fifo:SmallInt = 0):SmallInt;stdcall;External GTDLL;
function GT_SetCrdStopDec(cardNum:SmallInt ;crd:SmallInt;decSmoothStop:Double;decAbruptStop:Double):SmallInt;stdcall;External GTDLL;
function GT_GetCrdStopDec(cardNum:SmallInt ;crd:SmallInt;out pDecSmoothStop:Double;out pDecAbruptStop:Double):SmallInt;stdcall;External GTDLL;
function GT_SetCrdLmtStopMode(cardNum:SmallInt ;crd:SmallInt;lmtStopMode:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetCrdLmtStopMode(cardNum:SmallInt ;crd:SmallInt;out pLmtStopMode:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetUserTargetVel(cardNum:SmallInt ;crd:SmallInt;out pTargetVel:Double): SmallInt; stdcall; External GTDLL;
function GT_GetSegTargetPos(cardNum:SmallInt ;crd:SmallInt;out pTargetPos:LongInt): SmallInt; stdcall; External GTDLL;
function GT_GetCrdPos(cardNum:SmallInt ;crd:SmallInt;out pPos:Double):SmallInt;stdcall;External GTDLL;
function GT_GetCrdVel(cardNum:SmallInt ;crd:SmallInt;out pSynVel:Double):SmallInt;stdcall;External GTDLL;
function GT_SetCrdSingleMaxVel(cardNum:SmallInt ;crd:SmallInt;out pMaxVell:Double): SmallInt; stdcall; External GTDLL;
function GT_GetCrdSingleMaxVel(cardNum:SmallInt ;crd:SmallInt;out pMaxVell:Double): SmallInt; stdcall; External GTDLL;
function GT_GetCmdCount(cardNum:SmallInt ;crd:SmallInt;out pResult:SmallInt;fifo:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_BufLaserOn(cardNum:SmallInt ;crd:SmallInt;fifo:SmallInt=0;channel:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_BufLaserOff(cardNum:SmallInt ;crd:SmallInt;fifo:SmallInt=0;channel:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_BufLaserPrfCmd(cardNum:SmallInt ;crd:SmallInt;laserPower:Double;fifo:SmallInt=0;channel:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_BufLaserFollowRatio(cardNum:SmallInt ;crd:SmallInt;ratio:Double;minPower:Double;maxPower:Double;fifo:SmallInt=0;channel:SmallInt=0): SmallInt; stdcall; External GTDLL;
